# restaurant_audit

./: README.md  hooks.py  pyproject.toml  scheduled_audit_visit.json  tasks.py
restaurant_audit/: hooks.py  modules.txt  tasks.py
restaurant_audit/api/: audit_api.py  audit_integration.js  translation_api.py
restaurant_audit/public/css/: audit-form.css  audit-restaurants.css  dashboard.css  rtl.css
restaurant_audit/public/js/: audit-form.js  audit-restaurants.js  dashboard.js  language-switcher.js
restaurant_audit/restaurant_audit/api/: __init__.py  audit_api.py
restaurant_audit/restaurant_audit/doctype/audit_answer/: audit_answer.json  audit_answer.py
restaurant_audit/restaurant_audit/doctype/audit_progress/: audit_progress.js  audit_progress.json  audit_progress.py  test_audit_progress.py
restaurant_audit/restaurant_audit/doctype/audit_question/: audit_question.json  audit_question.py
restaurant_audit/restaurant_audit/doctype/audit_submission/: audit_submission.js  audit_submission.json  audit_submission.py  test_audit_submission.py
restaurant_audit/restaurant_audit/doctype/checklist_category/: checklist_category.js  checklist_category.json  checklist_category.py  test_checklist_category.py
restaurant_audit/restaurant_audit/www/: audit-login.html
restaurant_audit/translations/: ar.csv  en.csv
restaurant_audit/www/: audit-form.html  audit-login.html  audit-restaurants-clean.html  audit-restaurants-final.html  audit-restaurants-updated.html  audit-restaurants.html  audit-restaurants.py
(+36 files in other folders)
